greeter/manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
  template:
    metadata:
      labels:
        app: greeter
    spec:
      containers:
        - name: greeter
          image: greeter:latest
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /health
              port: 2020
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 2020
            initialDelaySeconds: 15
            periodSeconds: 5

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hash-reader-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hash-reader
  template:
    metadata:
      labels:
        app: hash-reader
    spec:
      volumes:
        - name: text
          configMap:
            name: hash-config
            items:
            - key: "information.txt"
              path: "information.txt"
      containers:
        - name: hashreader
          image: hash-reader:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: text
              mountPath: /usr/src/app/files
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 5

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: ping-pong:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
          readinessProbe:
            httpGet:
              path: /pings
              port: 5001
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /pings
              port: 5001
            initialDelaySeconds: 15
            periodSeconds: 5
