greeter/manifest/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stset
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: postgres
          image: postgres:18-alpine
          imagePullPolicy: "IfNotPresent"
          ports: 
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres-data-storage
              mountPath: /var/lib/postgresql # for data persistence accross container restarts
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
