greeter/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc
spec:
  type: ClusterIP
  selector:
    app: greeter # This is the app as declared in the deployment.
  ports:
    - port: 2020 # This is a port that is available to the cluster, in this case it can be ~ anything
      protocol: TCP
      targetPort: 2020 # This is the target port

---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong # This is the app as declared in the deployment.
  ports:
    - port: 2453 # This is a port that is available to the cluster, in this case it can be ~ anything
      protocol: TCP
      targetPort: 5001 

---
apiVersion: v1
kind: Service
metadata:
  name: hash-reader-svc
spec:
  type: ClusterIP
  selector:
    app: hash-reader # This is the app as declared in the deployment.
  ports:
    - port: 1334 # This is a port that is available to the cluster, in this case it can be ~ anything
      protocol: TCP
      targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgresapp
  ports:
    - port: 5432
      name: postgres
