greeter/manifest/waypoint.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: greeter-waypoint
  labels:
    istio.io/gateway-for: service
spec:
  gatewayClassName: istio-waypoint
  listeners:
    - name: mesh
      port: 15008
      protocol: HBONE
